<resources>
    <string name="app_name">Woca</string>
    <string name="Add_word">Добавить слово</string>
    <string name="Remove_word">Удалить слово</string>
    <string name="Read_word">Прочесть</string>
    <string name="Clear_word">Очистить</string>
    <string name="Language">Язык</string>
    <string name="TranslationDirection">Направление перевода</string>
    <string name="Search">Поиск</string>
    <string name="Word">Слово</string>
    <string name="Backup">Скопировать</string>
    <string name="action_settings">Настройки</string>
    <string name="action_add_word">Добавить слово</string>
    <string name="action_add_language">Добавить язык</string>
    <string name="action_add_translation_direction">Добавить направление перевода</string>
</resources>
